[package]
name = "movement-rest"
description = "additional movement rest api endpoints"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

aptos-api = { workspace = true }
aptos-types = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
move-core-types = { git = "https://github.com/movementlabsxyz/aptos-core", rev = "b2f58eaeda1d3929a7b381afca78408731b71d77" }
serde = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
